--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-bootstrap": "^2.10.7",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.0.2",
+    "react-webgl-trails": "^0.0.5",
     "uuid": "^11.0.3"
   },
   "devDependencies": {
